# pygluelock

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements_dev.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
Scripts/: main.py
docs/: index.md  installation.md  usage.md
pygluelock/: __init__.py  __main__.py  constants.py  exceptions.py  glue_lock.py
tests/: __init__.py  test_pygluelock.py
