[project]
name = "pygluelock"
version = "0.1.0"
description = "pygluelock is a sync wrapper around glue lock API"
readme = "README.md"
authors = [
  {name = "Adnan Hossain", email = "fadnanhossain@hotmail.com"}
]
maintainers = [
  {name = "Adnan Hossain", email = "fadnanhossain@hotmail.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]

[project.urls]
bugs = "https://github.com/aniiik/pygluelock/issues"
changelog = "https://github.com/aniiik/pygluelock/blob/master/changelog.md"
homepage = "https://github.com/aniiik/pygluelock"

[project.scripts]
pygluelock = "pygluelock.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
